[tool.poetry]
name = "llm-qe"
version = "0.1.0"
description = ""
authors = ["TaruSora <tarumoto@ai.cs.ehime-u.ac.jp>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
black = "^25.1.0"
isort = "^6.0.0"
torch = "^2.6.0"
typed-argument-parser = "^1.10.1"
tqdm = "^4.67.1"
transformers = "^4.49.0"
accelerate = "^1.4.0"
openpyxl = "^3.1.5"
pandas = "^2.2.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
